<resources>
    <string name="app_name">Mai Dubai</string>
    <string name="currency_code">AED</string>
    <string name="password">Password</string>
    <string name="alert">ALERT</string>
    <string name="warning">WARNING</string>
    <string name="water_range">Water Range</string>
    <string name="accessories">Accessories</string>
    <string name="by_day">Day</string>
    <string name="by_month">Month</string>
    <string name="open_weather_maps_app_id">3362480061efe725f9a79728377d88a8</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="OK">OK</string>
    <string name="rest_hydra">RESET</string>
    <string name="turn_on">TURN ON</string>
    <string name="existingcustomer">EXISTING CUSTOMER?</string>
    <string name="No_Network">This application requires internet connection. Please check your internet connection.</string>
    <string name="check_network">Please Check Internet connection.</string>
    <string name="No_GPS">Please turn on the GPS...!</string>
    <string name="No_GPS_turn_on">Please turn on the location to enjoy all App features...!</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">Log out</string>
    <string name="Loading_Data">Loading Data....</string>
    <string name="something_wrong">Some thing went wrong. Please try Again....!</string>
    <string name="logout_msg">Are you sure you want Logout?</string>
    <string name="sucessfully_address_saved">Your address has been sent for processing.</string>
    <string name="save">Save</string>
    <string name="rest">Reset</string>
    <string name="forgot_password">ForgotPassword ?</string>
    <string name="change_language">Change Language ?</string>
    <string name="get_started">GET STARTED</string>
    <string name="add_one_glass_of_water">Hi, add your\n first glass of water for today.</string>
    <string name="You_have_accepted"><u>Accepted Disclaimer</u></string>
    <string name="well_done">Well done!\nToday you drank</string>
    <string name="you_drink">Hi, you need to drink  atleast %s litres of water for today.</string>
    <string name="performed_normal">Today you performed \n excellent, congratulations!</string>
    <string name="add_drink">ADD DRINK</string>
    <string name="LOGIN_FAILED">LOGIN FAILED! Please try again.</string>
    <string name="SIGNUP_FAILED">SIGNUP FAILED! Please try again.</string>
    <string name="notification">Notification</string>
    <string name="no_orders_available">No Orders Available</string>
    <string name="no_media_available">No Media Available</string>
    <string name="no_address_available">No Addresses Available</string>
    <string name="no_products_available">No Products Available</string>
    <string name="no_images">No Images found</string>
    <string name="no_Cities">No Cities found</string>
    <string name="no_videos">No Videos found</string>
    <string name="conform_payment">Conform Payment</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="recurr_order">RECUR ORDER</string>
    <string name="recurringorder">Recurring order</string>
    <string name="Meters">Meters</string>
    <string name="Years">Years</string>
    <string name="conform">CONFIRM</string>
    <string name="Click_Proceed_to_Payment">Click Proceed to Payment.</string>
    <string name="DO_You_want_to_Recurr_Order">Do you want to add the items to Recurring.</string>
    <string name="Unable_to_address">Unable fetch the address. \nPlease fill the details.</string>
    <string name="DO_You_want_to_cancel_Order">Do you want to cancel\n   this Order?</string>
    <string name="DO_You_want_to_Repeat_Order">Do you want to repeat this Order?</string>
    <string name="DO_You_want_to_recurr_Order">Do you want to recur this Order?</string>
    <string name="DO_You_want_to_clear_Order">Are you sure you want to clear the items?</string>
    <string name="DO_You_want_to_remove_item">Are you sure you want to remove the item?</string>
    <string name="DO_You_want_to_cancel_recurring">Are you sure you want to cancel the Recurring?</string>
    <string name="DO_You_want_to_remove_address">Are you sure you want to remove this address?</string>
    <string name="DO_You_want_to_reset">Are you sure you want to reset?</string>
    <string name="Order_Successfully_saved">Order Successfully Saved.</string>
    <string name="Order_Successfully_Placed">Order Successfully Placed.</string>
    <string name="Please_provide_us_your_valuable_feedback">Please provide us your valuable feedback.</string>
    <string name="please_select_address">Your address has not been submitted. \nPlease add an address from manage address.</string>
    <string name="OTP_sent">OTP has successfully sent. Please Verify...</string>
    <string name="OTP_sent_fail">Failed to Send OTP...</string>
    <string name="payment_successfull">Payment.</string>
    <string name="Proceed">Proceed</string>
    <string name="recurring_order">recurring_order</string>
    <string name="city_name">City Name</string>
    <string name="order_cancel">Order Cancelled.</string>
    <string name="Recurr_Removed">Recurring Removed.</string>
    <string name="confirm">Confirmation</string>
    <string name="confirmation">Are you sure do want to delete this Order?</string>
    <string name="setLoaction">Select Location</string>
    <string name="incorrect">Incorrect mobile no or email.</string>
    <string name="invliad">Please enter valid \nmobile no or email id. </string>
    <string name="Already_emailId">Email/Mobile already Exist. </string>
    <string name="moreInfo">For more information \n Please contact our customer service. </string>
    <string name="mobile_no">+971 4 885 8905 </string>
    <string name="Mobile_number">Mobile number</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="search_cities"> Search Cities </string>
    <string name="no_offer_available"> Exciting new offers are coming your way! </string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="suggetion_to_drink">You should drink 1.4l of water a day, but you may change the number if you wish</string>
    <string name="tell_your_friends">Tell your friends about it</string>
    <string name="please_select_one">No items to display.\n Please select at least one.</string>
    <string name="No_Orders">You did not select any item Please select at least one</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="suggestion_warning">Please enter the Suggestion Drink Quantity in Settings.</string>
    <string name="successfully_saved">Successfully Saved.</string>
    <string name="no_changes">No Changes found.</string>
    <string name="age_please">Please enter the age.</string>
    <string name="gender_please">Please select the gender.</string>
    <string name="height_please">Please enter the height.</string>
    <string name="valid_weight">Weight can not be less than 30.</string>
    <string name="weight_please">Please enter the weight.</string>
    <string name="Hydration_Settings">Hydration Settings</string>
    <string name="drink_target">Please enter the drink target.</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="plzSetLocation">Please Select Location.</string>
    <string name="done">Done</string>
    <string name="view_orders">My Orders</string>
    <string name="close">Close</string>
    <string name="no_products_selected">Please select atleast one product.</string>
    <string name="photos">Photos</string>
    <string name="confirm_detials">Please Confirm the details.</string>
    <string name="cancle_order">Cancel order</string>
    <string name="view_detail">VIEW DETAILS</string>
    <string name="menu_name">Menu Name</string>
    <string name="weekly">Weekly</string>
    <string name="two_weeks">Two Weeks</string>
    <string name="monthly">Monthly</string>
    <string name="add">Add</string>
    <string name="recurring_orders">Recurring Orders</string>
    <string name="total">Total</string>
    <string name="prefferdTime">Prefferd Time</string>
    <string name="recurring_type">Recurring Type</string>
    <string name="dayes">Days</string>
    <string name="save_order">Save Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_develiery">Our Delivery Executives delivers water in your area on:</string>
    <string name="fetching_areas">Fetching Areas and Sub Areas...</string>
    <string name="no_area">No Area found</string>
    <string name="no_emirate">No Emirate found</string>
    <string name="no_subarea">No SubArea found</string>
    <string name="select_area">Select Area</string>
    <string name="select_emirates">Select Emirates</string>
    <string name="select_subarea">Select SubArea</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="product">Product</string>
    <string name="plz_select_area">Please select the Area.</string>
    <string name="plz_select_Emirates">Please select the Emirates.</string>
    <string name="view_order_details">View Order Details</string>
    <string name="display_options">Display Options</string>
    <string name="app_feedback">App Feedback</string>
    <string name="next">NEXT</string>
    <string name="edit">Edit</string>
    <string name="reset_password_title">Please enter the Email id you used to register with Mai Dubai</string>
    <string name="email">Email-id</string>
    <string name="reset_pswd">SEND PASSWORD</string>
    <string name="enter_address_detail">Enter your Address Details</string>
    <string name="aboutus"> <p align="justify">Mai Dubai LLC is a semi government  Bottled Drinking Water company operational since March 2014.</p></string>
    <string name="aboutus1"> <p align="justify">
        Based in Dubai, in the Yalayas Area on the Al Qudra street, Mai Dubai operates a state of the art Factory which runs and
        strict guidelines and follows local, regional and international procedures in production, bottling and safety.
        The factory is <b>HACCP, ISO and ESMA certified</b> holding the Emirates Quality Mark logo, and is also FDA approved.
        Mai Dubai since then has become a House Hold name in the United Arab Emirates, selling it\’s now iconic looking bottles,
        with distinguishing red colour in its logo, label and cap and. Mai Dubai\’s portfolio of products includes <b>5 Gallon bottles,
        small and mediums size bottles and cups.</b> </p></string>
    <string name="aboutUs2">
                             In May 2016 <b>His Highness Sheikh Mohamed Bin Rashid Al Maktoum, Vice President,</b> Prime Minister of the UAE, and
        Ruler of Dubai along side <b>His Highness Sheikh Hamdan</b> the Crown prince of Dubai went on a tour of the Factory and were guided by
        Mai Dubai CEO <b>Jay Andres</b> and Mai Dubai Chairman of the Board His Excellency <b>Saeed Al Tayer.</b> Attendees included Mai Dubai
        management, Mai Dubai Board members as well as member of the Media. Mai Dubai is the only bottled drinking water company
        nominated in 2015 by the Dubai Municipality for Best Factory Award, and the only bottled drinking water company to have been
        awarded the highest Grade in Food Safety <b>\“Grade A\”</b> also by the Dubai Municipality. Today Mai Dubai exports it’s products to the
        <b>GCC, Europe, Africa and Asia,</b> and will continue to exceed its customers expectations and provide only the most premium products
        and services.
    </string>
    <string name="aboutus_maidubai">About Mai Dubai</string>
    <string name="special_instr">Special Instructions : </string>
    <string name="cancel_Recurr">Cancel Recurring</string>
    <string name="repeat_order_cap">REPEAT ORDER</string>
</resources>