<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/rest_pswd_popup_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/black_medium"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/reset_password_title"
                android:padding="@dimen/margin_10"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mailidbg"
                android:drawableLeft="@drawable/mail_icon"
                android:drawablePadding="@dimen/margin_5"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_very_small_12"
                android:hint="@string/email"
                android:layout_marginTop="@dimen/margin_20"
                android:id="@+id/etEmailId"
                android:padding="@dimen/margin_5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_small_17"
                android:id="@+id/tvRestPswd"
                android:text="@string/reset_pswd"
                android:padding="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
