<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/past_order_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOrdercode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Order Code"
                android:textColor="@color/black_medium"
                android:textSize="@dimen/text_size_small_16" />

            <TextView
                android:id="@+id/tvBottelPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AED No"
                android:textSize="@dimen/text_size_small_16"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="date"
                android:textColor="@color/brown3"
                android:textSize="@dimen/text_size_very_small" />

            <TextView
                android:id="@+id/tvOrderCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/order_cancel_cell"
                android:drawablePadding="@dimen/margin_5"
                android:gravity="center"
                android:text="@string/order_cancel"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_very_small"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/past_order_line_bg"
        android:src="@drawable/line_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mohhamad bin Rasid"
            android:textColor="@color/black_medium"
            android:textSize="@dimen/text_size_very_small" />

        <TextView
            android:id="@+id/tv_view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/view_detail"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_very_small_14" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvaddressOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:singleLine="true"
        android:text="Downtown Dubai,PO Box 12336,Dubai UAE"
        android:textColor="@color/brown3"
        android:textSize="@dimen/text_size_very_small" />

    <TextView
        android:id="@+id/tvBottelSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="mai dubai 5 lit"
        android:textColor="@color/black_medium"
        android:textSize="@dimen/text_size_very_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/llSpecialInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/special_instr"
                android:textColor="@color/brown3"
                android:textSize="@dimen/text_size_very_small" />

            <TextView
                android:id="@+id/tvSpecialIns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Deliver quickly and carefully."
                android:textColor="@color/black_medium"
                android:textSize="@dimen/text_size_very_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llrecurringtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/recur_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recurringorder"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_very_small" />

                <TextView
                    android:id="@+id/tv_recurring_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="onc in a week."
                    android:textColor="@color/brown3"
                    android:textSize="@dimen/text_size_very_small" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_16"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16">

        <TextView
            android:id="@+id/tvCancelRecurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_Recurr"
            android:textColor="@color/paid_via_text"
            android:gravity="center"
            android:drawablePadding="@dimen/margin_5"
            android:drawableLeft="@drawable/cross"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_recurr_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@drawable/cancelorder"
            android:text="@string/recurr_order"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:visibility="visible" />
        <Button
            android:id="@+id/btEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@drawable/cancelorder"
            android:text="@string/edit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:visibility="gone" />


      <!--  <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>-->

        <Button
            android:id="@+id/btn_track_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:background="@drawable/cancelorder"
            android:text="@string/cancel_order"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRepeatOrder"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/cancelorder"
            android:text="@string/repeat_order_cap"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_very_small"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>