<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.winit.maidubai.AboutUsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_pager_height">
            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/aboutus_logo"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:id="@+id/llPagerTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_alignParentBottom="true">
            </LinearLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutus_maidubai"
            android:textColor="@color/red"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10"/>
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/red"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_20"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_bottle"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:background="@null"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_bottle"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvabout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus"
                    android:paddingLeft="@dimen/margin_10"
                    android:textSize="@dimen/text_size_very_small_14"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginBottom="@dimen/margin_18"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus1"
                    android:paddingLeft="@dimen/margin_10"
                    android:textSize="@dimen/text_size_very_small_14"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginBottom="@dimen/margin_18"/>
                <TextView
                    android:id="@+id/tvabout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUs2"
                    android:padding="@dimen/margin_10"
                    android:textSize="@dimen/text_size_very_small_14"
                    android:textColor="@color/black"
                    android:lineSpacingMultiplier="1.5"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
